# dbaas-ai-agent

./: .gitignore  pyrightconfig.json
ai-agent/: AGENTS.md  API.md  CONTEXT_ARCHITECTURE.md  DESIGN.md  FRONTEND.md  MEMORY.md  (+12 more)
ai-agent/backend/: pyproject.toml  pyrightconfig.json
ai-agent/backend/config/: dbaas_metric_catalog.json
ai-agent/backend/prompts/: compression.md  system.md
ai-agent/backend/schemas/: services.v1.schema.json
ai-agent/backend/src/dbass_ai_agent/: __init__.py  config.py  main.py
ai-agent/backend/src/dbass_ai_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ai-agent/backend/src/dbass_ai_agent/agent/: __init__.py  compression_events.py  dbaas_guard.py  factory.py  prompt.py  runtime.py
ai-agent/backend/src/dbass_ai_agent/api/: deps.py  routes_chat.py  routes_runs.py  routes_sessions.py  schemas.py
ai-agent/backend/src/dbass_ai_agent/dbaas/: __init__.py  background.py  config.py  constants.py  locks.py  query.py  schema.py  sync.py  tools.py  visibility.py  workspace.py
ai-agent/backend/src/dbass_ai_agent/identity/: __init__.py  models.py  resolver.py
ai-agent/backend/src/dbass_ai_agent/infra/: __init__.py  ids.py  logging.py  paths.py
ai-agent/backend/src/dbass_ai_agent/sessions/: approval_store.py  index_store.py  message_store.py  models.py  repository.py  service.py  summary_store.py  thread_binding.py
ai-agent/backend/tests/: test_chat_api.py  test_config.py  test_dbaas.py  test_dbaas_real_e2e.py  test_factory.py  test_llm_integration.py  test_logging.py  test_runtime.py  test_summarization_middleware.py
(+35 files in other folders)
