[project]
name = "dbass-ai-agent"
version = "0.1.0"
description = "Phase 1 backend for the dbass AI agent."
requires-python = ">=3.11"
dependencies = [
  "deepagents",
  "fastapi>=0.111.0",
  "httpx>=0.28.0",
  "jsonschema>=4.0.0",
  "langchain-openai",
  "langgraph-checkpoint-sqlite",
  "uvicorn>=0.30.0",
  "pydantic>=2.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
